# mcp-server

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  system_prompt.md
agent_code_chay/: README.md  a2a_client.py  agent.py  mcp_client.py  tool.py  utils.py
examples/: host_agent.py  remote_agent.py
mcp_server/: README.md  __main__.py  log_config.py  tools.py
mcp_server/utils/: mcp_server_utils.py
tests/: test_mcp.py  test_mcp_server_sse.py  test_mcp_server_stdio.py  test_mcp_server_streamable_http.py
